--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.50.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "firebase": "^11.9.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
