--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "driver.js": "^1.3.6",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
